--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include("../views/includes/header.ejs", {title: "Candy Company"}); %>
+
+<link rel ='stylesheet' href ='/stylesheets/style.css' />
+<body>
+  <h1><%= "Home"%></h1>
+  <a href="Flavor/all">Flaa vors</a> <br />
+</body>
+
