--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <link rel ='stylesheet' href ='/stylesheets/style.css' />
 <body>
-  <h1><%= "Home"%></h1>
-  <a href="Flavor/all">Flaa vors</a> <br />
+<h1><%= "Home"%></h1>
+<a href="Flavor/all">Flaa vors</a> <br />
+<a href="about/">About</a> <br />
 </body>
-
