--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,9 @@
 <link rel ='stylesheet' href ='/stylesheets/style.css' />
 <body>
 <h1><%= "Home"%></h1>
-<a href="Flavor/all">Flaa vors</a> <br />
+<a href="Employee/all">Employee</a> <br/>
+<a href="Flavor/all">Flavors</a> <br />
+<a href="Ingredient/all">Ingredients</a><br/>
+<a href="Vendor/all">Vendor</a><br/>
 <a href="about/">About</a> <br />
 </body>
