--- a/views/Flavor/FlavorViewAll.ejs
+++ b/views/Flavor/FlavorViewAll.ejs
@@ -1,2 +1,20 @@
 <%- include("../includes/header.ejs", {title:"Flavor - View All"}); %>
 <h1>Flavors</h1>
+<a href="/Flavor/add"> Add a new Flavor</a>
+
+
+<br>
+<table border = "1">
+    <th>Flavor Name</th><th>Flavor Inventor</th>
+    <% for (var i = 0; result.length > i; i++) {%>
+        <tr>
+            <td><%= result [i].Flavor_Name%></td>
+            <td><%= result [i].First_Name +', ' +result[i].Last_Name%></td>
+        </tr>
+
+        <% } %>
+</table>
+<br>
+
+<a href="/">Back</a>
+
