--- a/views/Employee/EmployeeViewAll.ejs
+++ b/views/Employee/EmployeeViewAll.ejs
@@ -1,6 +1,8 @@
 <%- include("../includes/header.ejs", {title:"Employee View All"}); %>
 <h1>Employee</h1>
 <a href="/account/add">Add New Employee</a> <br />
+
+<a href="/Employee/drivers">Driver infomation.</a> <br>
 <table border="1">
     <tr><th>First Name</th><th>Last Name</th><th>Email</th><th>Action</th></tr>
     <% for(var i=0; result.length > i; i++ ) { %>
