--- a/views/Employee/EmployeeViewAll.ejs
+++ b/views/Employee/EmployeeViewAll.ejs
@@ -1,25 +1,19 @@
 <%- include("../includes/header.ejs", {title:"Employee View All"}); %>
 <h1>Employee</h1>
-<a href="/account/add">Add New Employee</a> <br />
+
 
 <a href="/Employee/drivers">Driver infomation.</a> <br>
 <table border="1">
-    <tr><th>First Name</th><th>Last Name</th><th>Email</th><th>Action</th></tr>
+    <tr><th>First Name</th><th>Last Name</th><th>Email</th></tr>
     <% for(var i=0; result.length > i; i++ ) { %>
     <tr>
-        <td><a href="/Employee/?Employee_id=<%= result[i].Employee_id %>"><%= result[i].First_Name %></a></td>
+        <td><%= result[i].First_Name%></td>
         <td><%= result [i].Last_Name%></td>
         <td><%= result[i].Email %></td>
-        <td>
-            <button onclick="event.preventDefault();window.location.href='/account/edit/?account_id=<%= result[i].Employee_id %>'">Edit</button>
-            <form action="/account/delete/">
-                <input type="hidden" name="account_id" id="account_id" value="<%= result[i].account_id %>" />
-                <input type="submit" value="Delete"/>
-            </form>
-        </td>
     </tr>
     <% } %>
 </table>
-</body>
+<br>
+<a href="/">Back</a>
 
 </html>
